[JETTISON-117] Using Integer.valueOf where possible